--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies/apex"]
 	path = dependencies/apex
-	url = https://github.com/NVIDIA/apex
+	url = https://github.com/affromero/apex.git
