--- a/configs/demo/lyra_static.yaml
+++ b/configs/demo/lyra_static.yaml
@@ -2,8 +2,8 @@
 out_dir_inference: outputs/demo/lyra_static
 
 # Define dataset name defined in src/models/data/registry.py
-dataset_name: lyra_static_demo # Use pre-generated latents
-# dataset_name: lyra_static_demo_generated # Generate own latents
+# dataset_name: lyra_static_demo # Use pre-generated latents
+dataset_name: lyra_static_demo_generated # Generate own latents
 
 # Order of camera trajectory indices
 static_view_indices_fixed: ['5', '0', '1', '2', '3', '4']
