--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "kiui>=0.2.17",
     "loguru>=0.7.2",
     "lru-dict>=1.3.0",
+    "mamba-ssm",
     "mediapy>=1.2.2",
     "megatron-core>=0.10.0",
     "ml-dtypes>=0.4.1",
@@ -85,3 +86,4 @@ causal-conv1d = { git = "https://github.com/Dao-AILab/causal-conv1d", rev = "v1.
 fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim", rev = "8bdb59feb7b9a41b1fab625907cb21f5417deaac" }
 gsplat = { git = "https://github.com/nerfstudio-project/gsplat", rev = "73fad53c31ec4d6b088470715a63f432990493de" }
 moge = { git = "https://github.com/microsoft/MoGe.git", rev = "0286b495230a074aadf1c76cc5c679e943e5d1c6" }
+mamba-ssm = { git = "https://github.com/state-spaces/mamba", rev = "v2.2.4" }
