--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,12 @@ dependencies = [
     "attrs>=25.1.0",
     "better-profanity>=0.7.0",
     "boto3>=1.35.99",
-    "causal-conv1d",
-    "decord>=0.6.0",
-    "deepspeed>=0.17.5",
+    "causal-conv1d; sys_platform != 'darwin'",
+    "decord>=0.6.0; sys_platform != 'darwin'",
+    "deepspeed>=0.17.5; sys_platform != 'darwin'",
     "diffusers>=0.32.2",
     "einops>=0.8.1",
-    "flash_attn>=2.7.4.post1",
+    "flash_attn>=2.7.4.post1; sys_platform != 'darwin'",
     "fused-ssim",
     "gsplat",
     "huggingface-hub>=0.29.2",
@@ -44,7 +44,7 @@ dependencies = [
     "kiui>=0.2.17",
     "loguru>=0.7.2",
     "lru-dict>=1.3.0",
-    "mamba-ssm",
+    "mamba-ssm; sys_platform != 'darwin'",
     "mediapy>=1.2.2",
     "megatron-core>=0.10.0",
     "ml-dtypes>=0.4.1",
@@ -52,7 +52,7 @@ dependencies = [
     "mpi4py>=4.1.0",
     "nltk>=3.9.1",
     "numpy>=1.26.4,<2",
-    "nvidia-ml-py>=12.535.133",
+    "nvidia-ml-py>=12.535.133; sys_platform != 'darwin'",
     "omegaconf>=2.3.0",
     "onnx==1.18",
     "opencv-python>=4.10.0.84",
